[package]
name = "clunky"
authors = ["Tin Švagelj <tin.svagelj@live.com>"]
version = "0.1.0"
edition = "2021"

[features]
default = ["wlr"]
wayland = ["dep:wayland-client", "dep:wayland-protocols"]
wlr = ["wayland", "dep:wayland-protocols-wlr"]

[dependencies]
# Data & scripting
ron = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
rlua = "0.19.7"
rand = "0.8.5"

fork = "0.1.20"
clap = { version = "4.4.8", features = ["derive"] }

# Rendering
image = "0.24.7"
glam = "0.24.2"
skia-safe = "0.68.0"

# Logging & errors
log = "0.4.20"
env_logger = "0.10.1"
thiserror = "1.0.50"

# Util & macros
bitflags = "2.4.1"

# OS
memmap = "0.7.0"
tempfile = "3.8.1"
systemstat = "0.2.3"

# Wayland
wayland-client = { version = "0.31.1", optional = true }
wayland-protocols = { version = "0.31.0", optional = true, features = [
    "client",
] }
wayland-protocols-wlr = { version = "0.2.0", optional = true, features = [
    "client",
] }
