workspace = { members = ["mlua-skia"] }

[package]
name = "clunky"
authors = ["Tin Švagelj <tin.svagelj@live.com>"]
version = "0.1.0"
edition = "2021"

[features]
default = ["wlr"]
wayland = ["dep:wayland-client", "dep:wayland-protocols"]
wlr = ["wayland", "dep:wayland-protocols-wlr"]

[dependencies]
# Data & scripting
ron = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
mlua = { version = "0.9", features = ["luajit", "vendored"] }
bitflags = "2.4.1"
rand = "0.8.5"
phf = { version = "0.11", features = ["macros"] }
any_vec = { version = "0.13" }
#mio = { verson = "0.8.9", features = ["os-poll"] }

fork = "0.1.20"
clap = { version = "4.4.8", features = ["derive"] }

# Rendering
image = "0.24.7"
glam = "0.25.0"
skia-safe = { git = "https://github.com/rust-skia/rust-skia.git", rev = "03ef1ef138b5870c26b8c38d8c356d90cbecde39" }
mlua-skia = { path = "./mlua-skia" }

# Logging & errors
log = "0.4.20"
env_logger = "0.11.1"
thiserror = "1.0.50"

# System & concurrency
memmap2 = "0.9.0"
parking_lot = "0.12.1"
tempfile = "3.8.1"

# Util & polyfill
drain_filter_polyfill = "0.1.3"
paste = "1.0"

# Wayland
wayland-client = { version = "0.31.1", optional = true }
wayland-protocols = { version = "0.31.0", optional = true, features = [
    "client",
] }
wayland-protocols-wlr = { version = "0.2.0", optional = true, features = [
    "client",
] }
